--- a/util/requirements.txt
+++ b/util/requirements.txt
@@ -28,6 +28,7 @@ nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 numpy==1.26.4
+opencv-python==4.10.0.82
 packaging==24.0
 pandocfilters==1.5.1
 parso==0.8.4
@@ -39,6 +40,7 @@ prompt_toolkit==3.0.45
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.18.0
+PyOpenGL==3.1.7
 python-dateutil==2.9.0.post0
 pyzmq==26.0.3
 referencing==0.35.1
